--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
             <div class="navbar">
                 <ul>
                     <li class="header-logo">Header Logo</li>
-                    <li>header link one</li>
-                    <li>header link two</li>
-                    <li>header link three</li>
+                    <li><a href="#">header link one</a></li>
+                    <li><a href="#">header link two</a></li>
+                    <li><a href="#">header link three</a></li>
                 </ul>
             </div>
             <div class="hero">
@@ -75,7 +75,7 @@
     </section>
 
     <section id="footer">
-        <div class="footer">The Odin Project 2022</div>
+        <div class="footer"><span>@ </span>The Odin Project 2022</div>
     </section>
 </body>
 </html>
