--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                     <button type="button" class="button button1">Sign up</button>
                 </div>
                 <div class="hero-right">
-                    <img src="/images/site.jpg" alt="image here">
+                    <img src="images/site.jpg" alt="image here">
                 </div>
             </div>
         </div>
